--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2",
+    "reselect": "^4.0.0",
     "uikit": "^3.0.0-rc.26",
     "uikit-react": "^3.0.18"
   },
