--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
+    "react-responsive-modal": "^3.5.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.2",
     "reselect": "^4.0.0",
     "uikit": "^3.0.0-rc.26",
