--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.7.0",
     "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.7.0",
+    "react-maskedinput": "^4.0.1",
     "react-redux": "^6.0.0",
     "react-responsive-modal": "^3.5.1",
     "react-router-dom": "^4.3.1",
